Closed Bug 505886 Opened 15 years ago Closed 15 years ago

nsHashtable::Exists doesn't unlock mLock if !mHashtable.ops

Categories

(Core :: XPCOM, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity, hang)

Attachments

(1 file)

187 PRBool nsHashtable::Exists(nsHashKey *aKey)
189     if (mLock) PR_Lock(mLock);
190 
191     if (!mHashtable.ops)
192         return PR_FALSE;

199     if (mLock) PR_Unlock(mLock);
201     return exists;
202 }
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #390296 - Flags: review?(benjamin)
Attachment #390296 - Flags: review?(benjamin) → review+
http://hg.mozilla.org/mozilla-central/rev/f7dae5b49720
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: