Bug 505886 nsHashtable::Exists doesn't unlock mLock if !mHashtable.ops r=bsmedberg